<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_event">New Event</string>
    <string name="sport_selection">Sport: </string>
    <string name="location_enter">Location: </string>
    <string name="skill_level_enter">Skill Level: </string>
    <string name="time_enter">Time: </string>
    <string name="notes_enter">Notes/Rules/Equipment Needed: </string>
    <string name="cancel">Cancel</string>
    <string name="add_event">Add Event</string>
    <string name="add_name">Event Name: </string>
    <string name="event_dialog_title">Add an Event</string>


    <string-array name="sports">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Football</item>
        <item>Racquetball</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Tap Dancing</item>
    </string-array>

    <string-array name="cost">
        <item>Free</item>
        <item>$$$</item>
    </string-array>

</resources>
