<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:textSize="15sp"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAddSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_selection"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerSports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAddLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_enter"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EditTextLocation"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSkillLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_level_enter"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EditTextSkillLevel"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cost: "
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_enter"
        android:id="@+id/textViewTime"
        android:textSize="15sp"/>

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dip"
        android:layout_marginBottom="-20dip"
        android:scaleY="0.5"
        android:scaleX="0.5"
        android:id="@+id/timePicker" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_enter"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/EditTextAddNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelAdding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonAddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_event" />
    </LinearLayout>
</LinearLayout>